Show # imported days in Output

--- a/CovidDataLoader.ipynb
+++ b/CovidDataLoader.ipynb
@@ -28,39 +28,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_AG_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_AI_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_AR_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_BE_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_BL_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_BS_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_FR_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_GE_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_GL_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_GR_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_JU_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_LU_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_NE_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_NW_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_OW_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_SG_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_SH_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_SO_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_SZ_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_TG_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_TI_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_UR_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_VD_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_VS_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_ZG_total.csv\n",
-      "https://raw.githubusercontent.com/openZH/covid_19/master/fallzahlen_kanton_total_csv_v2/COVID19_Fallzahlen_Kanton_ZH_total.csv\n"
+      "Imported days: 471\nFirst Date: 2020-01-05 00:00:00\nLast Date: 2021-04-20 00:00:00\n"
      ]
     }
    ],
@@ -82,9 +57,10 @@
     "for canton in cantons:\n",
     "    filename = 'COVID19_Fallzahlen_Kanton_{}_total.csv'.format(canton)\n",
     "    url = baseUrl + filename\n",
-    "    print(url)\n",
+    "    # print(url)\n",
     "    s=requests.get(url).content\n",
     "    dfCanton = pd.read_csv(io.StringIO(s.decode('utf-8')))\n",
+    "    dfCanton['date'] = pd.to_datetime(dfCanton['date'])\n",
     "    # Calculate Daily Numbers\n",
     "    dfCanton['daily_tested'] = dfCanton['ncumul_tested'] - dfCanton['ncumul_tested'].shift()\n",
     "    dfCanton['daily_conf'] = dfCanton['ncumul_conf'] - dfCanton['ncumul_conf'].shift()\n",
@@ -103,181 +79,21 @@
     "dfClean.columns = ['date', 'canton', 'daily_tested', 'ncumul_tested', 'daily_conf', 'ncumul_conf', 'seven_day_conf', 'testRelation', 'new_hosp', 'current_icu', 'current_vent', 'ncumul_released', 'daily_released', 'daily_deceased', 'ncumul_deceased', 'seven_day_dec', 'current_isolated', 'current_quarantined_total']\n",
     "\n",
     "# Export\n",
-    "dfClean.to_csv('CovidData.csv', index=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "           date canton  daily_tested  ncumul_tested  daily_conf  ncumul_conf  \\\n",
-       "0    2020-02-26     AG           NaN            NaN         NaN          1.0   \n",
-       "1    2020-02-27     AG           NaN            NaN         0.0          1.0   \n",
-       "2    2020-02-28     AG           NaN            NaN         0.0          1.0   \n",
-       "3    2020-02-29     AG           NaN            NaN         2.0          3.0   \n",
-       "4    2020-03-01     AG           NaN            NaN         1.0          4.0   \n",
-       "..          ...    ...           ...            ...         ...          ...   \n",
-       "409  2021-04-11     ZH           NaN            NaN       348.0      99292.0   \n",
-       "410  2021-04-12     ZH           NaN            NaN       307.0      99599.0   \n",
-       "411  2021-04-13     ZH           NaN            NaN       521.0     100120.0   \n",
-       "412  2021-04-14     ZH           NaN            NaN       451.0     100571.0   \n",
-       "413  2021-04-15     ZH           NaN            NaN       507.0     101078.0   \n",
-       "\n",
-       "     testRelation  new_hosp  current_icu  current_vent  ncumul_released  \\\n",
-       "0             NaN       NaN          NaN           NaN              NaN   \n",
-       "1             NaN       NaN          NaN           NaN              NaN   \n",
-       "2             NaN       NaN          NaN           NaN              NaN   \n",
-       "3             NaN       NaN          NaN           NaN              NaN   \n",
-       "4             NaN       NaN          NaN           NaN              NaN   \n",
-       "..            ...       ...          ...           ...              ...   \n",
-       "409           NaN       NaN         47.0          28.0              NaN   \n",
-       "410           NaN       NaN         51.0          34.0              NaN   \n",
-       "411           NaN       NaN         53.0          36.0              NaN   \n",
-       "412           NaN       NaN         52.0          34.0              NaN   \n",
-       "413           NaN       NaN         56.0          37.0              NaN   \n",
-       "\n",
-       "     daily_released  daily_deceased  ncumul_deceased  current_isolated  \\\n",
-       "0               NaN             NaN              0.0               NaN   \n",
-       "1               NaN             0.0              0.0               NaN   \n",
-       "2               NaN             0.0              0.0               NaN   \n",
-       "3               NaN             0.0              0.0               NaN   \n",
-       "4               NaN             0.0              0.0               NaN   \n",
-       "..              ...             ...              ...               ...   \n",
-       "409             NaN             3.0           1354.0               NaN   \n",
-       "410             NaN             1.0           1355.0            2819.0   \n",
-       "411             NaN             1.0           1356.0            3217.0   \n",
-       "412             NaN             0.0           1356.0            3217.0   \n",
-       "413             NaN             0.0           1356.0            3518.0   \n",
-       "\n",
-       "     current_quarantined_total  \n",
-       "0                          NaN  \n",
-       "1                          NaN  \n",
-       "2                          NaN  \n",
-       "3                          NaN  \n",
-       "4                          NaN  \n",
-       "..                         ...  \n",
-       "409                        NaN  \n",
-       "410                        NaN  \n",
-       "411                        NaN  \n",
-       "412                        NaN  \n",
-       "413                        NaN  \n",
-       "\n",
-       "[9895 rows x 16 columns]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date</th>\n      <th>canton</th>\n      <th>daily_tested</th>\n      <th>ncumul_tested</th>\n      <th>daily_conf</th>\n      <th>ncumul_conf</th>\n      <th>testRelation</th>\n      <th>new_hosp</th>\n      <th>current_icu</th>\n      <th>current_vent</th>\n      <th>ncumul_released</th>\n      <th>daily_released</th>\n      <th>daily_deceased</th>\n      <th>ncumul_deceased</th>\n      <th>current_isolated</th>\n      <th>current_quarantined_total</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2020-02-26</td>\n      <td>AG</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2020-02-27</td>\n      <td>AG</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2020-02-28</td>\n      <td>AG</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2020-02-29</td>\n      <td>AG</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2.0</td>\n      <td>3.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2020-03-01</td>\n      <td>AG</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>409</th>\n      <td>2021-04-11</td>\n      <td>ZH</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>348.0</td>\n      <td>99292.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>47.0</td>\n      <td>28.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>3.0</td>\n      <td>1354.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>410</th>\n      <td>2021-04-12</td>\n      <td>ZH</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>307.0</td>\n      <td>99599.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>51.0</td>\n      <td>34.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1.0</td>\n      <td>1355.0</td>\n      <td>2819.0</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>411</th>\n      <td>2021-04-13</td>\n      <td>ZH</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>521.0</td>\n      <td>100120.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>53.0</td>\n      <td>36.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1.0</td>\n      <td>1356.0</td>\n      <td>3217.0</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>412</th>\n      <td>2021-04-14</td>\n      <td>ZH</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>451.0</td>\n      <td>100571.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>52.0</td>\n      <td>34.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.0</td>\n      <td>1356.0</td>\n      <td>3217.0</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>413</th>\n      <td>2021-04-15</td>\n      <td>ZH</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>507.0</td>\n      <td>101078.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>56.0</td>\n      <td>37.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.0</td>\n      <td>1356.0</td>\n      <td>3518.0</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>9895 rows × 16 columns</p>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 4
-    }
-   ],
-   "source": [
-    "dfClean"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-7-324870a141cf>, line 1)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-324870a141cf>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    let dateOldest = min(dfClean.date)\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
+    "dfClean.to_csv('CovidData.csv', index=False)\n",
     "\n",
     "dateOldest = min(dfClean.date)\n",
     "dateNewest = max(dfClean.date)\n",
-    "print(dateNewest - dateoldest)"
+    "print(\"Imported days: \" + str((dateNewest - dateOldest).days))\n",
+    "print(\"First Date: \" + str(dateOldest))\n",
+    "print(\"Last Date: \" + str(dateNewest))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'2020-01-05'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 5
-    }
-   ],
-   "source": [
-    "min(dfClean.date)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'2021-04-20'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 6
-    }
-   ],
-   "source": [
-    "max(dfClean.date)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dateOldest = min(dfClean.date)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dateNewest = max(dfClean.date)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'str' and 'str'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-68108dbaaa12>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdays\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdateNewest\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mdateOldest\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'str'"
-     ]
-    }
-   ],
-   "source": [
-    "days = dateNewest - dateOldest"
-   ]
+   "source": []
   }
  ]
 }
