--- a/CovidDataLoader.ipynb
+++ b/CovidDataLoader.ipynb
@@ -10,17 +10,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
+   "version": "3.7.7"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python37764bit210aca433ef047ca828037caa5bf2d46",
-   "display_name": "Python 3.7.7 64-bit"
+   "name": "python3",
+   "display_name": "Python 3.7.7 64-bit ('local')"
   },
   "metadata": {
    "interpreter": {
     "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
+  },
+  "interpreter": {
+   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
   }
  },
  "nbformat": 4,
@@ -28,14 +31,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Imported days: 471\nFirst Date: 2020-01-05 00:00:00\nLast Date: 2021-04-20 00:00:00\n"
+      "Imported days: 556\nFirst Date: 2020-01-05 00:00:00\nLast Date: 2021-07-14 00:00:00\n"
      ]
     }
    ],
