--- a/CovidDataLoader.ipynb
+++ b/CovidDataLoader.ipynb
@@ -15,7 +15,7 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.7.7 64-bit ('local')"
+   "display_name": "Python 3.7.7 64-bit"
   },
   "metadata": {
    "interpreter": {
@@ -32,16 +32,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Imported days: 556\nFirst Date: 2020-01-05 00:00:00\nLast Date: 2021-07-14 00:00:00\n"
-     ]
-    }
-   ],
    "source": [
     "import requests\n",
     "import io\n",
@@ -89,14 +79,26 @@
     "print(\"Imported days: \" + str((dateNewest - dateOldest).days))\n",
     "print(\"First Date: \" + str(dateOldest))\n",
     "print(\"Last Date: \" + str(dateNewest))"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Imported days: 7830\n",
+      "First Date: 2000-02-24 00:00:00\n",
+      "Last Date: 2021-08-02 00:00:00\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ]
 }
