Data Import merge

--- a/01 Data Import/ImportData.ipynb
+++ b/01 Data Import/ImportData.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import Data from source"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,11 +72,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save a copy to Archive Folder"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save to CSV\n",
+    "today = pd.to_datetime(\"today\")\n",
+    "dfClean.to_csv('../Data/Archive/' + str(today.year) + str(f\"{today:%m}\") + str(f\"{today:%d}\") + '.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
