--- a/01 Data Import/ImportData.ipynb
+++ b/01 Data Import/ImportData.ipynb
@@ -4,21 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import Data from source"
+    "# Import Data from source\n",
+    "\n",
+    "Imports Data from openZH Dataset (https://github.com/openZH/covid_19). The Covid Numbers are separated per Canton in different Files."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Imported days: 691\n",
+      "Imported days: 692\n",
       "First Date: 2020-01-01 00:00:00\n",
-      "Last Date: 2021-11-22 00:00:00\n"
+      "Last Date: 2021-11-23 00:00:00\n"
      ]
     }
    ],
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
